@@ -7,7 +7,7 @@
 //
 
 /*
-Copyright or © or Copr. CNRS, (November 17, 2004)
+Copyright or © or Copr. Bio++ Development Team, (November 17, 2004)
 
 This software is a computer program whose purpose is to provide classes
 for sequences analysis.
@@ -52,10 +52,10 @@ using namespace std;
 
 /******************************************************************************/
 // class constructor
-RNA::RNA()
+RNA::RNA(bool exclamationMarkCountsAsGap)
 {
 	// Alphabet size definition
-	resize(20);
+	resize(21);
 
 	// Alphabet content definition
 	// all unresolved bases use n°14
@@ -79,6 +79,10 @@ RNA::RNA()
   setState(17, NucleicAlphabetState(14, "O", 15, "Unresolved base"));
   setState(18, NucleicAlphabetState(14, "0", 15, "Unresolved base"));
   setState(19, NucleicAlphabetState(14, "?", 15, "Unresolved base"));
+  if (exclamationMarkCountsAsGap)
+    setState(20, NucleicAlphabetState(-1, "!", 0, "Unresolved base"));
+  else
+    setState(20, NucleicAlphabetState(14, "!", 15, "Unresolved base"));
 }
 
 /******************************************************************************/
