@@ -1,3 +1,6 @@
+06/01/12 Julien Dutheil
+* Added support for "!" state in nucleixc alphabet, which can be either a gap or an unknown character.
+
 24/11/11 Julien Dutheil
 * Added SequenceWalker class and test.
 
